csv ile updated

--- a/index2.html
+++ b/index2.html
@@ -108,7 +108,9 @@
 
     
 
-    d3.csv("https://vinayrajput.github.io/BarRaceChart/data/brand_values2.csv").then(function (data) {
+    //d3.csv("https://vinayrajput.github.io/BarRaceChart/data/brand_values2.csv").then(function (data) {
+      d3.csv("data/brand_values2.csv").then(function (data) {
+    
       //if (error) throw error;
 
       console.log(data);
